Fixed slection and end of line white space issue with Backspace

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ body{
     line-height: 1.4em;
     padding-left: 0.5em;
     margin: 1px 10px;
+    white-space: pre-wrap;
 }
 
 .textrow:focus{
